[project]
name = "dp-analysts"
version = "0.1.0"
description = "DBT project for Data Analysts - Gold layer"
readme = "README.md"
requires-python = ">=3.12.3,<3.12.4"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "dbt-core (>=1.10.15,<2.0.0)",
    "dbt-databricks (>=1.11.2,<2.0.0)",
    "sqlfluff (>=4.0.4,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
